--- a/network_params.yaml
+++ b/network_params.yaml
@@ -25,6 +25,8 @@ mev_params:
   # Bolt-specific images:
   mev_relay_image: ghcr.io/chainbound/bolt-relay:0.1.0
   mev_builder_image: ghcr.io/chainbound/bolt-builder:0.1.0
+
+  # Unsed images atm
   mev_boost_image: interstatenetwork/interstate-pbs-module:0.2.1-dev
   mev_sidecar_image: ghcr.io/chainbound/bolt-sidecar:0.1.0
 
