--- a/network_params.yaml
+++ b/network_params.yaml
@@ -8,14 +8,16 @@ additional_services:
   - tx_spammer
   - blockscout
   - dora
+  - full_beaconchain_explorer
+  #- prometheus_grafana
   # - assertoor
   # - blob_spammer
   # - custom_flood
   # - goomy_blob
   # - el_forkmon
   # - beacon_metrics_gazer
-  # - full_beaconchain_explorer
-  # - prometheus_grafana
+  #- full_beaconchain_explorer
+  #- prometheus_grafana
   # - blobscan
 
 mev_type: full
@@ -41,3 +43,30 @@ mev_params:
   mev_flood_seconds_per_bundle: 15
   custom_flood_params:
     interval_between_transactions: 1
+
+port_publisher:
+  nat_exit_ip: KURTOSIS_IP_ADDR_PLACEHOLDER
+  el:
+    enabled: true
+    public_port_start: 32000
+  cl:
+    enabled: true
+    public_port_start: 33000
+  vc:
+    enabled: true
+    public_port_start: 34000
+  additional_services:
+    enabled: true
+    public_port_start: 35000
+
+preregistered_validator_keys_mnemonic: 'giant issue aisle success illegal bike spike
+  question tent bar rely arctic volcano long crawl hungry vocal artwork sniff fantasy
+  very lucky have athlete'
+num_validator_keys_per_node: 64
+network_id: '3151908'
+deposit_contract_address: '0x4242424242424242424242424242424242424242'
+seconds_per_slot: 12
+genesis_delay: 10
+capella_fork_epoch: 2
+deneb_fork_epoch: 500
+
