network_params change to try and allow public ip

--- a/network_params.yaml
+++ b/network_params.yaml
@@ -45,7 +45,7 @@ mev_params:
     interval_between_transactions: 1
 
 port_publisher:
-  nat_exit_ip: KURTOSIS_IP_ADDR_PLACEHOLDER
+  nat_exit_ip: 162.55.190.235
   el:
     enabled: true
     public_port_start: 32000
