--- a/network_params.yaml
+++ b/network_params.yaml
@@ -1,36 +1,147 @@
+participants:
+# EL
+  - el_type: reth
+    el_image: ghcr.io/paradigmxyz/reth
+    el_log_level: ""
+    el_extra_env_vars: {}
+    el_extra_labels: {}
+    el_extra_params: []
+    el_tolerations: []
+    el_volume_size: 0
+    el_min_cpu: 0
+    el_max_cpu: 0
+    el_min_mem: 0
+    el_max_mem: 0
+# CL
+    cl_type: lighthouse
+    cl_image: sigp/lighthouse:latest-unstable
+    cl_log_level: ""
+    cl_extra_env_vars: {}
+    cl_extra_labels: {}
+    cl_extra_params: []
+    cl_tolerations: []
+    cl_volume_size: 0
+    cl_min_cpu: 0
+    cl_max_cpu: 0
+    cl_min_mem: 0
+    cl_max_mem: 0
+    supernode: false
+    use_separate_vc: true
+# Validator
+    vc_type: lighthouse
+    vc_image: sigp/lighthouse:latest-unstable
+    vc_log_level: ""
+    vc_count: 1
+    vc_extra_env_vars: {}
+    vc_extra_labels: {}
+    vc_extra_params: []
+    vc_tolerations: []
+    vc_min_cpu: 0
+    vc_max_cpu: 0
+    vc_min_mem: 0
+    vc_max_mem: 0
+    validator_count: null
+    use_remote_signer: false
+# Remote signer
+    remote_signer_type: web3signer
+    remote_signer_image: consensys/web3signer:latest
+    remote_signer_extra_env_vars: {}
+    remote_signer_extra_labels: {}
+    remote_signer_extra_params: []
+    remote_signer_tolerations: []
+    remote_signer_min_cpu: 0
+    remote_signer_max_cpu: 0
+    remote_signer_min_mem: 0
+    remote_signer_max_mem: 0
+# participant specific
+    node_selectors: {}
+    tolerations: []
+    count: 2
+    snooper_enabled: false
+    ethereum_metrics_exporter_enabled: false
+    xatu_sentry_enabled: false
+    prometheus_config:
+      scrape_interval: 15s
+      labels: {}
+    blobber_enabled: false
+    blobber_extra_params: []
+    builder_network_params: null
+    keymanager_enabled: false
 network_params:
-  seconds_per_slot: 2 # 2 seconds are the minimum for testing
+  network: kurtosis
+  network_id: "3151908"
+  deposit_contract_address: "0x4242424242424242424242424242424242424242"
+  seconds_per_slot: 12
+  num_validator_keys_per_node: 64
+  preregistered_validator_keys_mnemonic:
+    "giant issue aisle success illegal bike spike
+    question tent bar rely arctic volcano long crawl hungry vocal artwork sniff fantasy
+    very lucky have athlete"
+  preregistered_validator_count: 0
+  genesis_delay: 20
+  genesis_gaslimit: 30000000
+  max_per_epoch_activation_churn_limit: 8
+  churn_limit_quotient: 65536
+  ejection_balance: 16000000000
+  eth1_follow_distance: 2048
+  min_validator_withdrawability_delay: 256
+  shard_committee_period: 256
+  deneb_fork_epoch: 0
+  electra_fork_epoch: 100000000
+  eip7594_fork_epoch: 100000001
+  eip7594_fork_version: "0x60000038"
+  network_sync_base_url: https://snapshots.ethpandaops.io/
+  eof_activation_epoch: ""
+  data_column_sidecar_subnet_count: 128
+  samples_per_slot: 8
+  custody_requirement: 4
+  max_blobs_per_block: 6
+  additional_preloaded_contracts: {}
+  devnet_repo: ethpandaops
+  prefunded_accounts: {}
+additional_services: []
+dora_params:
+  image: ""
 tx_spammer_params:
-  tx_spammer_extra_args: ["--slot-time=1", "--accounts=10", "--txcount=1"]
-
-additional_services:
-  - broadcaster
-  - tx_spammer
-  - blockscout
-  - dora
-  - full_beaconchain_explorer
-  #- prometheus_grafana
-  # - assertoor
-  # - blob_spammer
-  # - custom_flood
-  # - goomy_blob
-  # - el_forkmon
-  # - beacon_metrics_gazer
-  #- full_beaconchain_explorer
-  #- prometheus_grafana
-  # - blobscan
-
-mev_type: full
-
+  tx_spammer_extra_args: []
+goomy_blob_params:
+  goomy_blob_args: []
+prometheus_params:
+  storage_tsdb_retention_time: "1d"
+  storage_tsdb_retention_size: "512MB"
+  min_cpu: 10
+  max_cpu: 1000
+  min_mem: 128
+  max_mem: 2048
+grafana_params:
+  additional_dashboards: []
+  min_cpu: 10
+  max_cpu: 1000
+  min_mem: 128
+  max_mem: 2048
+assertoor_params:
+  image: ""
+  run_stability_check: false
+  run_block_proposal_check: false
+  run_transaction_test: false
+  run_blob_transaction_test: false
+  run_opcodes_transaction_test: false
+  run_lifecycle_test: false
+  tests: []
+wait_for_finalization: false
+global_log_level: info
+snooper_enabled: false
+ethereum_metrics_exporter_enabled: false
+parallel_keystore_generation: false
+disable_peer_scoring: false
+persistent: false
+mev_type: null
 mev_params:
+  mev_relay_image: flashbots/mev-boost-relay
+  mev_builder_image: ethpandaops/flashbots-builder:main
   mev_builder_cl_image: sigp/lighthouse:latest
-  # Bolt-specific images:
-  mev_relay_image: ghcr.io/chainbound/bolt-relay:0.1.0
-  mev_builder_image: ghcr.io/chainbound/bolt-builder:0.1.0
-  mev_boost_image: interstatenetwork/interstate-pbs-module:0.2.1-dev
-  mev_sidecar_image: ghcr.io/chainbound/bolt-sidecar:0.1.0
-
-  mev_boost_args: []
+  mev_boost_image: flashbots/mev-boost
+  mev_boost_args: ["mev-boost", "--relay-check"]
   mev_relay_api_extra_args: []
   mev_relay_housekeeper_extra_args: []
   mev_relay_website_extra_args: []
@@ -43,30 +154,42 @@ mev_params:
   mev_flood_seconds_per_bundle: 15
   custom_flood_params:
     interval_between_transactions: 1
-
+xatu_sentry_enabled: false
+xatu_sentry_params:
+  xatu_sentry_image: ethpandaops/xatu-sentry
+  xatu_server_addr: localhost:8000
+  xatu_server_tls: false
+  xatu_server_headers: {}
+  beacon_subscriptions:
+    - attestation
+    - block
+    - chain_reorg
+    - finalized_checkpoint
+    - head
+    - voluntary_exit
+    - contribution_and_proof
+    - blob_sidecar
+apache_port: 40000
+global_tolerations: []
+global_node_selectors: {}
+keymanager_enabled: false
+checkpoint_sync_enabled: false
+checkpoint_sync_url: ""
 port_publisher:
-  nat_exit_ip: 162.55.190.235
+  nat_exit_ip: KURTOSIS_IP_ADDR_PLACEHOLDER
   el:
-    enabled: true
+    enabled: false
     public_port_start: 32000
   cl:
-    enabled: true
+    enabled: false
     public_port_start: 33000
   vc:
-    enabled: true
+    enabled: false
     public_port_start: 34000
-  additional_services:
-    enabled: true
+  remote_signer:
+    enabled: false
     public_port_start: 35000
-
-preregistered_validator_keys_mnemonic: 'giant issue aisle success illegal bike spike
-  question tent bar rely arctic volcano long crawl hungry vocal artwork sniff fantasy
-  very lucky have athlete'
-num_validator_keys_per_node: 64
-network_id: '3151908'
-deposit_contract_address: '0x4242424242424242424242424242424242424242'
-seconds_per_slot: 12
-genesis_delay: 10
-capella_fork_epoch: 2
-deneb_fork_epoch: 500
+  additional_services:
+    enabled: false
+    public_port_start: 36000
 
