--- a/network_params.yaml
+++ b/network_params.yaml
@@ -1,12 +1,45 @@
 network_params:
-  seconds_per_slot: 2 # 2 seconds are the minimum for testing
+  network: kurtosis
+  network_id: "3151908"
+  deposit_contract_address: "0x4242424242424242424242424242424242424242"
+  seconds_per_slot: 2
+  num_validator_keys_per_node: 64
+  preregistered_validator_keys_mnemonic:
+    "giant issue aisle success illegal bike spike
+    question tent bar rely arctic volcano long crawl hungry vocal artwork sniff fantasy
+    very lucky have athlete"
+  preregistered_validator_count: 0
+  genesis_delay: 20
+  genesis_gaslimit: 30000000
+  max_per_epoch_activation_churn_limit: 8
+  churn_limit_quotient: 65536
+  ejection_balance: 16000000000
+  eth1_follow_distance: 2048
+  min_validator_withdrawability_delay: 256
+  shard_committee_period: 256
+  deneb_fork_epoch: 0
+  electra_fork_epoch: 100000000
+  fulu_fork_epoch: 100000001
+  eip7594_fork_epoch: 100000002
+  eip7594_fork_version: "0x60000038"
+  network_sync_base_url: https://snapshots.ethpandaops.io/
+  data_column_sidecar_subnet_count: 128
+  samples_per_slot: 8
+  custody_requirement: 4
+  max_blobs_per_block: 6
+  additional_preloaded_contracts: {}
+  devnet_repo: ethpandaops
+  prefunded_accounts: {}
+
 tx_spammer_params:
   tx_spammer_extra_args: ["--slot-time=1", "--accounts=10", "--txcount=1"]
+  tx_spammer_extra_args: []
+
 
 additional_services:
   - broadcaster
   - tx_spammer
-  - blockscout
+  # - blockscout
   - dora
   # - assertoor
   # - blob_spammer
