--- a/network_params.yaml
+++ b/network_params.yaml
@@ -51,13 +51,13 @@ additional_services:
 mev_type: full
 
 mev_params:
-  mev_builder_cl_image: sigp/lighthouse:latest
+  mev_builder_cl_image: sigp/lighthouse:v5.3.0
   # Bolt-specific images:
   mev_relay_image: ghcr.io/chainbound/bolt-relay:0.1.0
   mev_builder_image: ghcr.io/chainbound/bolt-builder:0.1.0
 
   # Unsed images atm
-  mev_boost_image: interstatenetwork/interstate-pbs-module:0.2.1-dev
+  mev_boost_image: whereasjovially/interstate-pbs-module:0.2.2
   mev_sidecar_image: ghcr.io/chainbound/bolt-sidecar:0.1.0
 
   mev_boost_args: []
