--- a/network_params.yaml
+++ b/network_params.yaml
@@ -53,7 +53,7 @@ mev_type: full
 mev_params:
   mev_builder_cl_image: sigp/lighthouse:latest
   # Bolt-specific images:
-  mev_relay_image: ghcr.io/chainbound/bolt-relay:0.1.0
+  mev_relay_image: whereasjovially/interstate-relay:0.1.0
   mev_builder_image: ghcr.io/chainbound/bolt-builder:0.1.0
 
   # Unsed images atm
