--- a/network_params.yaml
+++ b/network_params.yaml
@@ -51,7 +51,7 @@ additional_services:
 mev_type: full
 
 mev_params:
-  mev_builder_cl_image: sigp/lighthouse:v5.3.0
+  mev_builder_cl_image: sigp/lighthouse:latest
   # Bolt-specific images:
   mev_relay_image: whereasjovially/interstate-relay:0.1.0
   mev_builder_image: ghcr.io/chainbound/bolt-builder:0.1.0
