--- a/kurtosis_config.yaml
+++ b/kurtosis_config.yaml
@@ -28,7 +28,7 @@ mev_params:
   # instead of MEV-Boost by Flashbots
   bolt_boost_image: ghcr.io/chainbound/bolt-boost:v0.3.0-alpha
   bolt_sidecar_image: ghcr.io/chainbound/bolt-sidecar:v0.3.0-alpha
-  helix_relay_image: ghcr.io/chainbound/helix:0.3.0
+  helix_relay_image: whereasjovially/helix:0.3.0
   mev_relay_image: ghcr.io/chainbound/bolt-relay:v0.2.1-alpha
   mev_builder_image: ghcr.io/chainbound/bolt-builder:v0.3.0-alpha.rc3
   mev_boost_image: ghcr.io/chainbound/bolt-mev-boost:v0.3.0-alpha
