--- a/kurtosis_config.yaml
+++ b/kurtosis_config.yaml
@@ -1,6 +1,7 @@
 network_params:
   seconds_per_slot: 2 # 2 seconds are the minimum for testing
   genesis_delay: 0 # This is needed to avoid timestamp issues on Helix
+  electra_fork_epoch: 5000000000000000
 tx_spammer_params:
   tx_spammer_extra_args: ["--slot-time=1", "--accounts=10", "--txcount=1"]
 
